# autolightning

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: flake8.yml  pylint.yml  ruff.yml  test.yml
autolightning/: AutoCLI.py  AutoDataModule.py  AutoModule.py  __init__.py  auto_cli.py  auto_data_module.py  auto_module.py  cli.py  config.py  datasets.py  loggers.py  main.py  types.py  utils.py
autolightning/cb/: online_fine_tuner.py
autolightning/dm/: __init__.py  continual.py  few_shot.py  self_supervised.py
autolightning/lm/: __init__.py  brevitas.py  classifier.py  distilled.py  few_shot.py  gan.py  icl.py  maml.py  prototypical.py  self_supervised.py  supervised.py
autolightning/lm/functional/: prototypical.py  supervised.py
autolightning/lm/self_supervised/: barlow_twins.py  dino.py  lightly.py  swav.py
autolightning/nn/: distillation_losses.py
autolightning/sweeps/: wandb.py
examples/self_supervised/: dino.py
tests/: test_auto_data_module.py  test_auto_module.py  test_auto_module_shared_step.py  test_automodule.py  test_pandas_logger.py  test_transform_pipeline.py
