[project]
name = "autolightning"
version = "0.0.1"
authors = [
  { name = "Douwe den Blanken" }
]
description = "Automated configuration of PyTorch Lightning models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["tools", "utils", "machine learning", "ml", "ai", "pytorch", "torch", "python", "lightning", "automl", "hydra"]
dependencies = [
  'torch',
  'torchvision',
  'lightning',
  'git+https://github.com/V0XNIHILI/torch-mate.git@main'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/V0XNIHILI/autolightning"
"Bug Tracker" = "https://github.com/V0XNIHILI/autolightning/issues"
