[project]
name = "autolightning"
version = "0.1.1"
authors = [
  { name = "Douwe den Blanken" }
]
description = "Automated configuration of PyTorch Lightning models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["tools", "utils", "machine learning", "ml", "ai", "pytorch", "torch", "python", "lightning", "automl", "hydra"]
dependencies = [
  'torch',
  'torchvision',
  'lightning',
  "typing_extensions; python_version < '3.11'",
  'torch-mate@git+https://github.com/V0XNIHILI/torch-mate'
]

[project.scripts]
autolightning = "autolightning.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# To allow installation of the package from the git repository
allow-direct-references = true

[project.urls]
"Homepage" = "https://github.com/V0XNIHILI/autolightning"
"Bug Tracker" = "https://github.com/V0XNIHILI/autolightning/issues"
