[project]
name = "autolightning"
version = "0.1.2"
authors = [
  { name = "Douwe den Blanken" }
]
description = "Automated configuration of PyTorch Lightning models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["tools", "utils", "machine learning", "ml", "ai", "pytorch", "torch", "python", "lightning", "automl", "hydra"]
dependencies = [
  'torch',
  'torchvision',
  'lightning',
  'torchmetrics',
  'scikit-learn',
  "jsonargparse[signatures]<= 4.33.2",
  'omegaconf',
  "typing_extensions; python_version < '3.11'",
  'torch-mate@git+https://github.com/V0XNIHILI/torch-mate'
]

[project.scripts]
autolightning = "autolightning.main:cli_main"
auto-wandb-sweep = "autolightning.sweeps.wandb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# To allow installation of the package from the git repository
allow-direct-references = true

[tool.ruff]
line-length = 120

[project.urls]
"Homepage" = "https://github.com/V0XNIHILI/autolightning"
"Bug Tracker" = "https://github.com/V0XNIHILI/autolightning/issues"
